removed coffee cup animation between 990 and 1100 px to eliminate overflow and spacing issues. Padding changes didn't fix it and canvas is not responsive as expected

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -239,6 +239,12 @@ i {
 
 /* media queries */
 
+@media screen and (min-width:992px) and (max-width: 1100px) {
+    #animation_container {
+        display:none;
+    }
+}
+
 @media screen and (max-width: 992px) {
     /* … */
     .projectFeat {
@@ -251,16 +257,18 @@ i {
     font-size:3vw;
   }
 
-  /* #animation_container {
-    padding-left:5em;
-
-} */
 }
 
 @media screen and (max-width: 768px) {
     i {
         font-size:3vw;
       }
+}
+
+@media screen and (max-width: 640px) {
+    #animation_container {
+        display:none;
+    }
 }
 
 @media screen and (max-width: 576px) {
